# chiro-reporter

./: Cargo.toml  README.md  create_chiro-reporter_structure.sh  directory_structure_and_files.txt  dog.txt  github-verification-test.txt  notice.md  tree.txt
backend_actix_web/: Cargo.toml  api.rs  llm.rs
backend_actix_web/src/: lib.rs  llm.rs  main.rs
backend_actix_web/src/routes/: report.rs
backend_actix_web/src/services/: openai.rs
backend_actix_web/tests/: openai.rs
docker/: Dockerfile.ocr
documentation/: Project Plan.docx
export_engine/: Cargo.toml
export_engine/src/: docx.rs  main.rs  pdf.rs
image_analyzer/: Cargo.toml
image_analyzer/src/: main.rs  vision.rs
nginx/: nginx.conf
ocr_service/: Cargo.toml
ocr_service/src/: main.rs  ocr.rs
template_engine/: Cargo.toml
template_engine/src/: main.rs  template.rs
validation_engine/: Cargo.toml
validation_engine/src/: main.rs  structure.rs  style.rs
